@@ -28,7 +28,8 @@ enum DR1DamageType {
     DR1PIERCING,
     DR1CRUSHING,
     DR1SLASHING,
-    DR1OVERBEARING
+    DR1OVERBEARING,
+    DR1DTYPE_LAST
 };
 
 #endif /* __DR1GLOBALS__H */
