@@ -1,3 +1,6 @@
+Added ac adjustment by armor type
+Added new weapon stats including plusToHit
+
 Added location to player and monster
 Added ranged attacks (and location)
 Ranged weapon rate of fire
